@@ -11,6 +11,7 @@ the current reads reference name when outputting to the SAM format.
 * All characters are ignored after the leading whitespace when reading
 in the names of the contigs in the reference FASTA file.  Previously,
 whitespaces where converted to '_'.
+* Adding for reading .gz and .bz2 files in solid2fastq (C-version).
 
 Version 0.6.2a
 * Adding more optional tag fields to SAM output, most notably the 
